# riir-airflow

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.ko.md  README.md  airflow.sh  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: makefile.yml
blog/: 2024-05-06.md  2024-05-07.md  2024-05-11.md  2024-05-13.md  2024-05-23.md  2024-06-08.md  2024-06-09.md  2024-06-24.md  2024-06-30.md  2024-07-29.md  2024-08-07.md
dags/: money_circuit.py  simple.py
devel/: 404.html  index.html  objects.inv  sitemap.xml
devel/blog/: index.html
devel/blog/2024/05/06/2024-05-06/: index.html
devel/blog/2024/05/06/2024-05-07/: index.html
devel/blog/2024/05/06/2024-05-11/: index.html
devel/blog/2024/05/06/2024-05-13/: index.html
devel/blog/2024/05/06/2024-06-08/: index.html
devel/blog/2024/05/06/2024-06-09/: index.html
devel/blog/2024/05/06/2024-06-24/: index.html
devel/blog/2024/05/06/2024-06-30/: index.html
devel/blog/2024/05/06/2024-07-29/: index.html
devel/blog/2024/05/07/2024-05-07/: index.html
devel/blog/2024/05/11/2024-05-11/: index.html
devel/blog/2024/05/13/2024-05-13/: index.html
devel/blog/2024/05/23/2024-05-23/: index.html
devel/blog/2024/06/08/2024-06-08/: index.html
devel/blog/2024/06/09/2024-06-09/: index.html
devel/blog/2024/06/24/2024-06-24/: index.html
devel/blog/2024/06/30/2024-06-30/: index.html
devel/blog/2024/07/29/2024-07-29/: index.html
devel/blog/2024/08/07/2024-08-07/: index.html
devel/blog/2024/10/13/elixir-체험/: index.html
devel/blog/2024/10/13/tour-for-elixir/: index.html
devel/blog/archive/2024/: index.html
devel/blog/archive/2024/page/2/: index.html
devel/blog/page/2/: index.html
devel/contributing/: index.html
devel/search/: search_index.json
docs/: index.md
docs/blog/posts/: 2024-05-06.md  2024-05-07.md  2024-05-11.md  2024-05-13.md  2024-05-23.md  2024-06-08.md  2024-06-09.md  2024-06-24.md  2024-06-30.md  2024-07-29.md  2024-08-07.md  buget-planner.md  niceui.md  postgres-localhost-for-devel.md  tiny-proj-for-elixir.md  tour-for-elixir.md
hello/config/: config.exs  dev.exs  test.exs
hello/lib/hello_web/: endpoint.ex
kv/lib/: kv.ex
python/rairflow/: __init__.py  __main__.py  settings.py
python/rairflow/_core/: fastapi_app.py
python/riir_airflow/: __init__.py  __main__.py  asgi.py  configuration.py  gui.py  main.py
python/riir_airflow/_core/: fastapi_app.py  scheduler_loop.py
python/riir_airflow/cli/: serve.py  show.py
python/riir_airflow/executors/: asgi_executor.py
python/riir_airflow/gui/: __init__.py
python/riir_airflow/gui/atoms/: message.py
python/riir_airflow/gui/pages/: api_router_example.py  class_example.py  function_example.py  home.py
python/riir_airflow/gui/templates/: theme.py
riir-airflow/: README.md  pyproject.toml
riir-airflow/python/riir_airflow/: __init__.py  main.py
riir-airflow/python/riir_airflow/_core/: fastapi_app.py  scheduler_loop.py
riir-airflow/python/riir_airflow/executors/: asgi_executor.py
riir-airflow/test/: test_fastapi.py
site/: 404.html  index.html  sitemap.xml
site/blog/: index.html
site/blog/2024/05/06/2024-05-06/: index.html
site/blog/archive/2024/: index.html
site/blog/page/2/: index.html
src/: lib.rs
src/riir_airflow/: __init__.py
test/: conftest.py
(+11 files in other folders)
