[project]
name = "riir-airflow"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi[uvicorn]>=0.112.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pyright>=1.1.369",
    "nodeenv>=1.9.1",
    "pre-commit>=3.7.1",
]

[tool.rye.workspace]
members = ["riir-*"]

[tool.rye.scripts]
make = "make"
