[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "riir-airflow"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi[standard]>=0.112.0",
    "pydantic-settings>=2.2.1",
    "apache-airflow>=2.9.1",
    "sh>=2.0.6",
    "orjson>=3.10.3",
    "pydantic-extra-types>=2.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
rairflow = 'rairflow.__main__:cli_app'

[tool.maturin]
python-source = "python"
module-name = "rairflow._lowlevel"
features = ["pyo3/extension-module"]

[tool.uv]
dev-dependencies = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.38",
    "mkdocstrings-python>=1.11.1",
    "nodeenv>=1.9.1",
    "pre-commit>=3.8.0",
    "pyright>=1.1.382.post1",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]
