[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "riir-airflow"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic-settings>=2.2.1",
    "typer>=0.12.3",
    "apache-airflow>=2.9.1",
    "sh>=2.0.6",
    "orjson>=3.10.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
riir-airflow = 'riir_airflow.main:cli_app'

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "riir_airflow._lowlevel"
features = ["pyo3/extension-module"]
